are add fluent validation with example

--- a/Base.Lgm.Business/Base.Lgm.Business.csproj
+++ b/Base.Lgm.Business/Base.Lgm.Business.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Impl\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="9.5.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Base.Lgm.Core\Base.Lgm.Core.csproj" />
+  </ItemGroup>
+
 </Project>
