--- a/ExternalBase.Lgm.Utilities/ExternalBase.Lgm.Utilities.csproj
+++ b/ExternalBase.Lgm.Utilities/ExternalBase.Lgm.Utilities.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Impl\" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
