--- a/Base.Lgm.Repositories/Base.Lgm.Repositories.csproj
+++ b/Base.Lgm.Repositories/Base.Lgm.Repositories.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Impl\" />
+    <ProjectReference Include="..\Base.Lgm.Core\Base.Lgm.Core.csproj" />
   </ItemGroup>
 
 </Project>
