--- a/Base.Lgm.Business/Base.Lgm.Business.csproj
+++ b/Base.Lgm.Business/Base.Lgm.Business.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Impl\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.5.2" />
+    <PackageReference Include="Mapster" Version="7.1.5" />
   </ItemGroup>
 
   <ItemGroup>
