--- a/Base.Lgm.Repositories/Base.Lgm.Repositories.csproj
+++ b/Base.Lgm.Repositories/Base.Lgm.Repositories.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Base.Lgm.Core\Base.Lgm.Core.csproj" />
   </ItemGroup>
 
