--- a/ExternalBase.Lgm.Utilities/ExternalBase.Lgm.Utilities.csproj
+++ b/ExternalBase.Lgm.Utilities/ExternalBase.Lgm.Utilities.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
