se agrega la funcionalidad para  el acceso de datos

--- a/Base.Lgm.Business/Base.Lgm.Business.csproj
+++ b/Base.Lgm.Business/Base.Lgm.Business.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Base.Lgm.Core\Base.Lgm.Core.csproj" />
+    <ProjectReference Include="..\Base.Lgm.Repositories\Base.Lgm.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
